@@ -2,9 +2,15 @@
 
 Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2010-07-09 14:06:43 +0100 (Fri, 09 Jul 2010) $ $Revision: 1332 $)
+(As of $Date: 2010-09-12 12:12:04 +0100 (Sun, 12 Sep 2010) $ $Revision: 1342 $)
 
 =cut
+
+=head2 Changes in Devel::NYTProf 4.05 (svn 1340) 12th Sept 2010
+
+  Fixed handling of negative values for subroutine line ranges
+    (that may be added to %DB::sub by buggy software). 
+  Protect against bad line numbers hanging report generation.
 
 =head2 Changes in Devel::NYTProf 4.04 (svn 1332) 9th July 2010
 
